--- a/sule-panen-kemenangan-maksimal-secara-beruntun-di-mahjong-ways-2-secara-fenomenal.html
+++ b/sule-panen-kemenangan-maksimal-secara-beruntun-di-mahjong-ways-2-secara-fenomenal.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="google-site-verification" content="RHhHFoO_r9cmKRh4-udQXdN8368Kd7svxjkDWJxdtoI" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <title>5 Shio Pembawa Keberuntungan Menuju Cap Goh Meh: Sule Panen Kemenangan Maksimal Secara Beruntun di Mahjong Ways 2 Secara Fenomenal Dapat Cuan Berkah Dalam Waktu Singkat, Simak Tips dan Triknya</title>
